--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		  </dependency>
+
+		  <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>annotationProcessor</scope>
+		</dependency>
 		
 	</dependencies>
 
